# TCP-SYN-Flood-Detector

./: .gitignore  INSTALLATION_TEST_REPORT.md  LICENSE  README.md  TESTING_GUIDE.md  install.sh  meson.build  uninstall.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: README.md  ci.yml  code-quality.yml  codeql.yml  dependency-review.yml  pr-checks.yml  pr-labels.yml  release.yml
conf/: synflood-detector.conf  synflood-detector.service  whitelist.conf
conf/presets/: README.md  aggressive.conf  balanced.conf  conservative.conf  high-traffic.conf
docs/: CONFIGURATION.md  INSTALL.md  TROUBLESHOOTING.md  UNINSTALL.md  WHITELIST_TEMPLATES.md  synflood-detector.8
include/: common.h
src/: main.c
src/analysis/: procparse.c  procparse.h  tracker.c  tracker.h  whitelist.c  whitelist.h
src/capture/: nfqueue.c  nfqueue.h  rawsock.c  rawsock.h
src/config/: config.c  config.h
src/enforce/: expiry.c  expiry.h  ipset_mgr.c  ipset_mgr.h
src/observe/: logger.c  logger.h  metrics.c  metrics.h
tests/: MANUAL_TESTING.md  README.md  RUN_TESTS.md  TEST_SUMMARY.md
tests/integration/: test_blocking_scenarios.c  test_config_integration.c  test_detection_flow.c  test_performance_stress.c  test_whitelist_integration.c
tests/unit/: test_common.c  test_config.c  test_logger.c  test_procparse.c  test_tracker.c  test_tracker_advanced.c  test_whitelist.c  test_whitelist_advanced.c
tests/unity/: unity.c  unity.h
tools/: synflood-ctl
